test/ui/test/lowering/typed-holes-unsupported.stderr
error: typed holes are not supported yet
 --> ${TEST_FOLDER}/lowering/typed-holes-unsupported.lushui:1:10
  |
1 | meaning: ?Hole = ?hole
  |          ^^^^^
  |

error: typed holes are not supported yet
 --> ${TEST_FOLDER}/lowering/typed-holes-unsupported.lushui:1:18
  |
1 | meaning: ?Hole = ?hole
  |                  ^^^^^
  |

error: aborting due to 2 previous errors

